--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "src/server.ts",
   "scripts": {
     "dev": "nodemon ",
-    "build": "tsc",
-    "start": "npm run build && node build/index.js",
+    "build": "tsc --outDir dist",
+    "start": "npm run build && node dist/Server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Victor Balbo",
