--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "mashgin-api",
   "version": "1.0.0",
   "description": "A simple api to handle a checkout order system",
-  "main": "src/server.ts",
+  "main": "src/index.ts",
   "scripts": {
     "dev": "nodemon ",
     "build": "tsc --outDir dist",
-    "start": "npm run build && node dist/Server.js",
+    "start": "npm run build && node dist/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Victor Balbo",
