--- a/package.json
+++ b/package.json
@@ -7,10 +7,16 @@
     "dev": "nodemon ",
     "build": "tsc --outDir dist",
     "start": "npm run build && node dist/src/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "cross-env ENV=Test GIST_URI=https://api.github.com/gists/ jest --testTimeout=10000"
   },
   "author": "Victor Balbo",
   "license": "MIT",
+  "jest": {
+    "preset": "ts-jest",
+    "automock": false,
+    "testEnvironment": "node",
+    "coveragePathIgnorePatterns": ["/node_modules/"]
+  },
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
@@ -22,12 +28,18 @@
   "devDependencies": {
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
+    "@types/jest": "^29.5.3",
+    "@types/supertest": "^2.0.12",
     "@types/swagger-jsdoc": "^6.0.1",
     "@types/swagger-ui-express": "^4.1.3",
     "@typescript-eslint/eslint-plugin": "^6.2.1",
     "@typescript-eslint/parser": "^6.2.1",
+    "cross-env": "^7.0.3",
     "eslint": "^8.46.0",
+    "jest": "^29.6.2",
     "nodemon": "^3.0.1",
+    "supertest": "^6.3.3",
+    "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.6"
   }
