--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "nodemon ",
     "build": "tsc --outDir dist",
     "start": "npm run build && node dist/src/index.js",
-    "test": "cross-env ENV=Test GIST_URI=https://api.github.com/gists/ jest --testTimeout=10000"
+    "test": "cross-env ENV=Test GIST_URI=https://api.github.com/gists/ jest --testTimeout=10000 --coverage"
   },
   "author": "Victor Balbo",
   "license": "MIT",
