--- a/.eslintrc
+++ b/.eslintrc
@@ -14,6 +14,7 @@
 		"semi": ["error", "never"],
 		"quotes": ["error", "double"],
 		"no-mixed-spaces-and-tabs": ["error"],
-		"indent": ["error", "tab"]
+		"indent": ["error", "tab"],
+		"@typescript-eslint/ban-ts-comment": "off"
 	}
 }
